<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Erabook</string>
    <string name="welcome">Welcome to Erabook!</string>
    <string name="welcome_desc">The Number One Best Ebook Store &amp; Reader Application in this Century</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_acc">I Already Have an Account</string>
    <string name="desc_img">Some description for img</string>
    <string name="gender">What is you gender?</string>
    <string name="select_gender">Select gender for better content.</string>
    <string name="male">I am male</string>
    <string name="female">I am female</string>
    <string name="notsay">Rather not to say</string>
    <string name="continue_text">Continue</string>
    <string name="age">Chose Your Age</string>
    <string name="select_age">Select age range for better content.</string>
    <string name="age_1">14–17</string>
    <string name="age_2">18–24</string>
    <string name="age_3">25–29</string>
    <string name="age_4">30–34</string>
    <string name="age_5">35–39</string>
    <string name="age_6">40–44</string>
    <string name="age_7">45–49</string>
    <string name="age_8">>=50</string>
    <string name="genre">Chose the Book Genre You Like</string>
    <string name="genre_text">Select your preferred book genre for better recommendations, or you can skip it.</string>
    <string name="skip">Skip</string>
    <string name="genre_item">Classics</string>
    <string name="complete_profile">Complete Your Profile</string>
    <string name="complete_description">Don\'t worry, only you can see your personal data. No one else will be able to see it.</string>
    <string name="full_name_label">Full Name</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="birthday_label">Date of Birth</string>
    <string name="country_label">Country</string>
    <string name="create_acc">Create an Account</string>
    <string name="user_info">User Info</string>
    <string name="create_desc">Enter your username, email &amp; password. If you forget it, then you have to do forgot password.</string>
    <string name="username_label">Username</string>
    <string name="user_info_desc">Please enter some more info about your profile.</string>
    <string name="email_label">Email</string>
    <string name="mobile_label">Mobile</string>
    <string name="location_label">Location</string>
    <string name="email_example">example@gmail.com</string>
    <string name="mobile_example">+383 44 123 456</string>
    <string name="location_example">Prishtine, Kosove</string>
    <string name="password_label">Password</string>
    <string name="email_error">Email is not valid!</string>
    <string name="confirm_label">Confirm Password</string>
    <string name="remember">Remember me</string>
    <string name="password_match">Your passwords doesn\'t match!!!</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="update_profile">Update profile</string>
    <string name="log_out">Log out</string>
    <string name="signup_succ">You have been registered successfully!</string>
    <string name="signup_succ_desc">Go to log in…</string>
    <string name="hello_message">Hello there</string>
    <string name="hello_message_desc">Please enter your username/email and password to log in.</string>
    <string name="forgot_password_email">Please enter your email!</string>
    <string name="forgot">Forgot Password</string>
    <string name="signin">Sign In</string>
    <string name="login">Log In</string>
    <string name="send_email">Send email</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="continue_with">------------ or continue with ------------</string>
    <string name="dont_have_acc">Don\'t have an account? Register!</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="notification_time_is_up">Time is up! Take a rest.</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="wishlist">Wishlist</string>
    <string name="purchase">Purchase</string>
    <string name="profile">Profile</string>
    <string name="explore_genre">Explore by Genre</string>
    <string name="recommended">Recommended for you</string>
    <string name="on_wishlist">On Your Wishlist</string>
    <string name="book_title">Harry Potter &amp; the Deathly Hallows</string>
    <string name="book_author">J.K.Rowling</string>
    <string name="release_date">Release date: </string>
    <string name="total_reviews">6.8k reviews</string>
    <string name="size_number">5.6 MB</string>
    <string name="size">size</string>
    <string name="pages_number">748</string>
    <string name="pages">Number of pages:  </string>
    <string name="purchase_number">50M+</string>
    <string name="purchases">purchases</string>
    <string name="buy_book">Buy Book</string>
    <string name="download">Download: </string>
    <string name="read_book">Read Book</string>
    <string name="weeks_on_the_list">Weeks on the list: </string>
    <string name="about_book">About this book</string>
    <string name="about_book_desc">There\'s no description for this book!!!</string>
    <string name="favorite">Favorite Books</string>
    <string name="focus_time">Focus Time</string>
    <string name="book_list_to_single_book_transition_image">book_list_to_single_book_transition_image</string>
    <string name="genre_word">Genre</string>
    <string name="favorite_info">You don\'t have any books marked as favorite, go to Discover and mark some!</string>
    <string name="login_info">Log in first to mark some favorite books!</string>
    <string name="share_book">Hey check out this book %1$s. It\'s written by %2$s and has %3$s pages,it was released in: %4$s. </string>
    <string name="share_book_subject">Book details</string>
    <string name="send_details">Send book details via: </string>
    <string name="dumb_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy
        text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five
        centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
        sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="erabook_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="erabook_notification_channel_name" translatable="false">Erabook</string>
    <string name="notification_title">Erabook</string>
    <string name="you_can_do_it">You can do it!</string>
    <string name="timer_zero">00:00</string>
    <string name="start_button">Start</string>
    <string name="give_up_button">Give Up</string>
    <string name="random_number">4.6</string>
    <string name="by">by</string>
    <string name="pick_focus_time">Chose a time to focus! </string>
    <string name="hold_button">"Long hold the button to stop the timer."</string>
    <string name="pick_time">"Pick a time please!"</string>
    <string name="email_sent">Email sent, please check your inbox!</string>
    <string name="email_not_sent">Email was not sent, something went wrong!</string>
    <string name="snooze">Snooze</string>
    <string name="already_login">Already have an account? Log in.</string>
    <string name="enter_email">Enter email please!</string>
    <string name="email_exists">Email already exists!!!</string>
    <string name="wrong_password_email">Wrong password or email!!!</string>
    <string name="enter_password">Enter password please!</string>
    <string name="login_successful">Log in successful.</string>
    <string name="auth_failed">Authentication failed.Check if email in use?</string>
    <string name="email_in_use">The email address is already in use by another account.</string>
    <string name="password_to_short">Password must be at least 6 characters!</string>
    <string name="error_fetching_data">Error fetching data!</string>
    <string name="error_connection">You\'re not connected to the internet!</string>
    <string name="error_code_message_incorrect">The supplied auth credential is incorrect, malformed or has expired.</string>
    <string name="error_code_message_connection">A network error (such as timeout, interrupted connection or unreachable host) has occurred.</string>
    <string name="default_web_client_id">"1048665387941-uto14qr1gqqm6g7oefdh49png8s136vb.apps.googleusercontent.com"</string>
    <string name="update_message_success">Data updated successfully!</string>
    <string name="update_message_error">Error updating documents!</string>
    <string name="update_message_error_getting_data">Error getting data!</string>
    <string name="default_error">Something went wrong?!</string>
    <string name="barcode_not_found">Barcode not found in picture!</string>
    <string name="profile_successful">Profile picture uploaded successfully.</string>
    <string name="load_more">Load more…</string>
    <string name="empty_text"></string>
    <string name="cancelled">Cancelled</string>
    <string name="location_denied">Location permission denied!</string>
    <string name="wait">Loading…</string>
    <string name="connectivity_unavailable">You\'re not connected to the Internet!</string>
    <string name="discover_fragment">DiscoverFragment</string>
    <string name="update_connection">To update your info make sure you have internet!</string>
    <string name="image_saved">Photo captured successfully.</string>
    <string name="camera_denied">Camera permission denied!</string>
    <string name="search_something">Search or scan a book!?</string>
    <string name="no_data">We don\'t have that book in our database !?</string>
    <string name="favorite_added">Favorite book added!</string>
    <string name="favorite_removed">Book is removed from favorites successfully!</string>
    <string name="recommended_for_you">For you</string>
    <string name="new_york_best_sellers">NY Best Sellers</string>
    <string name="minutes"> minutes</string>
    <string name="required_fields">Please fill all the fields!</string>
    <string name="check_network_connection">Check if you\'re connected to the internet!!!</string>
    <string name="clicked">Clicked</string>
    <string name="paper_back_nonfiction">Paper Back Nonfiction</string>
    <string name="series_books">Series Books</string>
    <string name="trade_fiction_paperback"> Trade Fiction Paperback</string>
    <string name="advice_hot_to_and_miscellaneous">Advice How-To and miscellaneous</string>
    <string name="paperback_graphic_books">Paperback Graphic Books</string>
    <string name="rank">Rank: </string>
    <string name="paperback_cat">Paperback Nonfiction</string>
    <string name="series_cat">Series Books</string>
    <string name="trade_cat">Trade Fiction Paperback</string>
    <string name="advice_cat">Advice How-To and Miscellaneous</string>
    <string name="graphics_cat">Graphic Books and Manga</string>
    <string name="scanning_failed">Barcode scanning failed!!!</string>
</resources>