<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton
        android:id="@+id/back_forgot_password"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/space20"
        android:background="@null"
        android:contentDescription="@string/desc_img"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toTopOf="@id/hello_message_forgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hello_message_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space20"
        android:text="@string/hello_message"
        android:textSize="@dimen/textXL"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_forgot_password" />
    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space20"
        android:text="@string/forgot_password_email"
        android:textSize="@dimen/textMedium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_message_forgot" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_forgot_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space20"
        android:hint="@string/email_label"
        app:boxStrokeColor="@color/primary"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/send_email_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/space20"
        android:text="@string/send_email"
        android:textStyle="bold"
        app:circularflow_radiusInDP="22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>