<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backProfile"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_margin="20dp"
            android:background="@null"
            android:contentDescription="@string/desc_img"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space10"
            android:text="@string/full_name_label"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImg" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="@dimen/space20"
        android:src="@drawable/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileContainer" />

    <TextView
        android:id="@+id/emailProfileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space10"
        android:text="@string/email_label"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/emailIcon"
        app:layout_constraintStart_toEndOf="@id/emailIcon" />

    <TextView
        android:id="@+id/emailProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space10"
        android:layout_marginTop="@dimen/space5"
        android:text="@string/email_example"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/emailIcon"
        app:layout_constraintTop_toBottomOf="@id/emailIcon" />

    <ImageView
        android:id="@+id/mobileIcon"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="@dimen/space20"
        android:src="@drawable/mobile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailProfile" />

    <TextView
        android:id="@+id/mobileProfileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space10"
        android:text="@string/mobile_label"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/mobileIcon"
        app:layout_constraintStart_toEndOf="@id/mobileIcon" />

    <TextView
        android:id="@+id/mobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space10"
        android:layout_marginTop="@dimen/space5"
        android:text="@string/mobile_example"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/mobileIcon"
        app:layout_constraintTop_toBottomOf="@id/mobileIcon" />
    <ImageView
        android:id="@+id/locationIcon"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="@dimen/space20"
        android:src="@drawable/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobileNumber" />
    <TextView
        android:id="@+id/locationProfileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space10"
        android:text="@string/location_label"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/locationIcon"
        app:layout_constraintStart_toEndOf="@id/locationIcon" />
    <TextView
        android:id="@+id/locationCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space10"
        android:layout_marginTop="@dimen/space5"
        android:text="@string/location_example"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/locationIcon"
        app:layout_constraintTop_toBottomOf="@id/locationIcon" />
    <ImageView
        android:id="@+id/locationNext"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="@dimen/space20"
        android:src="@drawable/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/locationIcon"
        app:layout_constraintBottom_toBottomOf="@id/locationCity"/>
    <Button
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:text="@string/log_out"
        android:textStyle="bold"
        app:circularflow_radiusInDP="22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>