<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/signupsucc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space20"
        android:text="@string/signup_succ"
        android:textColor="@color/primary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/go_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space20"
        android:text="@string/signup_succ_desc"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupsucc" />

    <ImageView
        android:id="@+id/OK"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="40dp"
        android:contentDescription="@string/desc_img"
        android:src="@drawable/successful"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_to_login" />
</androidx.constraintlayout.widget.ConstraintLayout>